kubernetes/deploy-nfs-pv-claim-pod.yml

apiVersion: v1
kind: Pod
metadata:
  name: web-proxy-nfs-pod 
  labels:
    name: web-proxy-nfs-pod
spec:
  containers:
    - name: web-proxy-nfs-pod
      image: homebrew-image/web-proxy-nfs-pod
      ports:
        - name: web
          containerPort: 80
      volumeMounts:
        - name: nfsvol 
          mountPath: /etc/apache2
  securityContext:
      supplementalGroups: [100003] 
      privileged: false
  volumes:
    - name: nfsvol
      persistentVolumeClaim:
        claimName: nfs-web-proxy-pvc
