kubernetes/ingress-network.yml
# @Author: nzvincent@gmail.com | Vincent Pang
# Reference: https://kubernetes.io/docs/concepts/services-networking/ingress/
# INTERNET -> DNS -> Ingress-network -> Proxy -> Service -> PODS -> container

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  tls:
  - hosts:
    - www.example.com
    secretName: www.example-secret-tls
    - video.example.com
    secretName: video.example-secret-tls
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: webserver
          servicePort: 443
  - host: video.example.com
    http:
      paths:
      - backend:
          serviceName: videoserver
          servicePort: 443

spec:
  tls:
  - hosts:
    - sslexample.foo.com
    secretName: testsecret-tls
