kubernetes/ingress-proxy.yml
# @Author: nzvincent@gmail.com | Vincent Pang
# Reference: https://kubernetes.io/docs/concepts/services-networking/ingress/
# INTERNET -> DNS -> Ingress-network -> Proxy -> Service -> PODS -> container

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: name-virtual-host-ingress
spec:
  rules:
  - host: www.example.com
    http:
      paths:
      - backend:
          serviceName: webserver
          servicePort: 80
  - host: video.example.com
    http:
      paths:
      - backend:
          serviceName: videoserver
          servicePort: 80
